--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 .App {
   text-align: center;
-  font-family: Avenir, Helvetica, Arial, "Noto Sans KR", sans-serif;
+  font-family: "Titillium Web", sans-serif;
 
   .mobile-container {
     padding: 0 15px;
